chore: update package name so we don't conflict

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "cpx",
-  "version": "1.5.0",
+  "name": "@mvnu/cpx",
+  "version": "1.5.1",
   "description": "Copy file globs, watching for changes.",
   "engines": {
     "node": ">=6.5"
@@ -54,7 +54,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/mysticatea/cpx.git"
+    "url": "https://github.com/esingletary/cpx.git"
   },
   "keywords": [
     "cp",
@@ -75,7 +75,7 @@
   "author": "Toru Nagashima",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/mysticatea/cpx/issues"
+    "url": "https://github.com/esingletary/cpx/issues"
   },
-  "homepage": "https://github.com/mysticatea/cpx"
+  "homepage": "https://github.com/esingletary/cpx"
 }
